Quick fix to an IE bug which caused our yayIcon to look squished, due to width not being explicit

--- a/questions-with-classifier-ega-war/src/main/webapp/dev/sass/style.scss
+++ b/questions-with-classifier-ega-war/src/main/webapp/dev/sass/style.scss
@@ -643,6 +643,7 @@ menu-list {
 
 .yayIcon {
     height: 40px;
+    width:  40px;
 }
 
 .ask-question-tag {
